fixed some spacing issues with icons, and made them all float. Still need to tidy up the codemess

--- a/css/styles.css
+++ b/css/styles.css
@@ -302,6 +302,14 @@ i {
 
 /* contact area */
 
+.contact-area {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 150px;
+}
+
 .icons-line {
     text-align: center;
     margin: 0 auto;
@@ -380,12 +388,13 @@ i {
 
 /* About me */
 
-.about-me {
+.skillsContainer {
     width: 100%;
     height: 100vh;
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
     font-size: 2rem;
     color: #ECFAEC;
 }
